--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,17 @@ export(base_url)
 export(build_url)
 export(forecast10day)
 export(forecast3day)
+export(geolookup)
 export(get_api_key)
 export(has_api_key)
 export(history)
 export(history_daily)
 export(hourly)
 export(hourly10day)
+export(is_valid_airport)
+export(satellite)
 export(set_api_key)
 export(set_location)
+export(webcam)
 export(wunderground_request)
 export(yesterday)
