--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(almanac)
 export(astronomy)
 export(base_url)
 export(build_url)
+export(current_hurricane)
 export(forecast10day)
 export(forecast3day)
 export(geolookup)
@@ -15,9 +16,11 @@ export(history_daily)
 export(hourly)
 export(hourly10day)
 export(is_valid_airport)
+export(rawtide)
 export(satellite)
 export(set_api_key)
 export(set_location)
+export(tide)
 export(webcam)
 export(wunderground_request)
 export(yesterday)
