Updated documentation and meta data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,8 @@ Author: Alex Shum <alex@ALShum.com>
 Maintainer: Alex Shum <alex@ALShum.com>
 Description: Tools for getting historical weather information and forecasts from weather underground API.
 License: GPL (>= 2)
-Suggests: testthat
+Imports: 
+	httr,
+	dplyr
+Suggests: 
+	testthat
