--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,12 @@ export(history_daily)
 export(hourly)
 export(hourly10day)
 export(is_valid_airport)
+export(is_valid_territory)
+export(list_airports)
+export(list_countries)
+export(list_states)
+export(lookup_airport)
+export(lookup_country_code)
 export(rawtide)
 export(satellite)
 export(set_api_key)
