--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(list_countries)
 export(list_states)
 export(lookup_airport)
 export(lookup_country_code)
+export(planner)
 export(rawtide)
 export(satellite)
 export(set_api_key)
