history range function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_api_key)
 export(has_api_key)
 export(history)
 export(history_daily)
+export(history_range)
 export(hourly)
 export(hourly10day)
 export(is_valid_airport)
