--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
 
-language: c
+language: r
+warnings_are_errors: true
+sudo: required
 
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
@@ -20,4 +22,3 @@ notifications:
     on_success: change
     on_failure: change
 
-sudo: true
