update meta data

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@
 language: r
 sudo: required
 warnings_are_errors: true
+
+env:
+  global:
+    - NOT_CRAN=true
+before_install: echo "options(repos = c(CRAN='http://cran.rstudio.com'))" > ~/.Rprofile
