--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: rwunderground
 Type: Package
 Title: R Interface to Weather Underground API
-Version: 0.1.5
-Date: 2017-02-16
+Version: 0.1.6
+Date: 2017-05-01
 Author: Alex Shum <alex@ALShum.com>
-Maintainer: Alex Shum <alex@ALShum.com>
-Description: Tools for getting historical weather information and forecasts from wunderground.com.  Historical weather and forecast data includes, but is not limited to, temperature, humidity, windchill, wind speed, dew point, heat index.  Additionally, the weather underground weather API also includes information on sunrise/sunset, tidal conditions, satellite/webcam imagery, weather alerts, hurricane alerts and historical record high/low temperatures.
+Maintainer: Eric Hare <eric@omnianalytics.io>
+Description: Tools for getting historical weather information and forecasts 
+    from wunderground.com. Historical weather and forecast data includes, but 
+    is not limited to, temperature, humidity, windchill, wind speed, dew point, 
+    heat index. Additionally, the weather underground weather API also includes 
+    information on sunrise/sunset, tidal conditions, satellite/webcam imagery, 
+    weather alerts, hurricane alerts and historical high/low temperatures.
 URL: https://github.com/ALShum/rwunderground, http://www.wunderground.com/weather/api
 BugReports: https://github.com/alshum/rwunderground/issues
 License: GPL (>= 2)
